--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"
 />
+
+
 </head>
 
 <body>
@@ -82,7 +84,9 @@
       <input type="password" placeholder="your password" id="password" class="box" />
       <p>forget your <a href="#"> click here</a></p>
       <p id="createAccount">don't have account<a href="creteAccount.html"> create your account</a></p>
-      <input type="submit" value="login now" class="btn" />
+      <!-- <input type="submit" value="login now" class="btn" /> -->
+      <button class="btn" id="btn-login" disabled="true" onclick="login()">Log in</button>
+      <button class="btn" id="btn-logout" disabled="true" onclick="logout()">Log out</button>
     </form>
   </header>
   <!-- Header End...here -->
@@ -333,7 +337,7 @@
   <!-- Blogs start here -->
   <section class="blogs" id="blogs">
     <h1 class="heading">our <span>blogs</span></h1>
-
+    
     <div class="box-container">
 
       <div class="box">
@@ -374,7 +378,6 @@
           <a href="#" class="btn">read more</a>
         </div>
       </div>
-
     </div>
   </section>
 
@@ -387,7 +390,7 @@
 
       <div class="box">
         <h3>groco <i class="fas fa-shopping-basket"></i></h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa porro voluptatem labore alias illum quod harum ea numquam pariatur facilis, neque vitae itaque incidunt. Saepe magnam unde corporis molestias eligendi!</p>
+        <p>taque incidunt. Saepe magnam unde corporis molestias eligendi!</p>
         <div class="share">
           <a href="#" class="fab fa-facebook-f"></a>
           <a href="#" class="fab fa-twitter"></a>
@@ -414,7 +417,6 @@
           <a href="#" class="links"><i class="fa-solid fa-arrow-right"></i>blogs</a>
       </div>
 
-      
       <div class="box">
         <h3>newsletter</h3>
         <p>subscribe for latest updates</p>
@@ -423,12 +425,39 @@
       </div>
     </div>
 
-    <div class="credit">created by <span>miss. web desiner</span> | all rights reserved</div>
+    <div class="credit">created by <span>miss. web devleper</span> | all rights reserved</div>
   </section>
 </body>
 <script src="Scripts/index.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
 <script src="Scripts/Login.js"></script>
 <script src="Scripts/SearchFuncationallty.js"></script>
-<script src="Scripts/Productes.js"></script>
+<!-- <script src="Scripts/Productes.js"></script> -->
+
+
+<script type="module">
+  // Import the functions you need from the SDKs you need
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js";
+  import {getDatabase} from "https://www.gstatic.com/firebasejs/9.23.0/firebase-database.js";
+  import { getAuth, createUserWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-auth.js";
+  // TODO: Add SDKs for Firebase products that you want to use
+  // https://firebase.google.com/docs/web/setup#available-libraries
+
+  // Your web app's Firebase configuration
+  const firebaseConfig = {
+    apiKey: "AIzaSyDv2Gxq_NMJqp-C1dTbJzwY0OjhMLkvER8",
+    authDomain: "login-page-ad606.firebaseapp.com",
+    databaseURL: "https://login-page-ad606-default-rtdb.firebaseio.com",
+    projectId: "login-page-ad606",
+    storageBucket: "login-page-ad606.appspot.com",
+    messagingSenderId: "713690380219",
+    appId: "1:713690380219:web:67e359be16c7a7e382769e"
+  };
+
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+  const database = getDatabase(app)
+  const auth = getAuth();
+
+</script>
 </html>
