--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <nav class="navbar">
       <a href="#home">home</a>
-      <a href="#Feature">feature</a>
+      <a href="#features">feature</a>
       <a href="#products">products</a>
       <a href="#categories">categories</a>
       <a href="#review">review</a>
