--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@
     <form action="" class="search-form">
       <input type="search" id="search-box" placeholder="seacrh here..." value="" />
       <label for="search-box" class="fas fa-search"></label>
-      <input type="submit">
     </form>
 
     <div class="shopping-cart">
@@ -431,11 +430,11 @@
 <script src="Scripts/index.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
 <script src="Scripts/Login.js"></script>
-<script src="Scripts/SearchFuncationallty.js"></script>
+<!-- <script src="Scripts/SearchFuncationallty.js"></script> -->
 <!-- <script src="Scripts/Productes.js"></script> -->
 
 
-<script type="module">
+<!-- <script type="module">
   // Import the functions you need from the SDKs you need
   import { initializeApp } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js";
   import {getDatabase} from "https://www.gstatic.com/firebasejs/9.23.0/firebase-database.js";
@@ -459,5 +458,5 @@
   const database = getDatabase(app)
   const auth = getAuth();
 
-</script>
+</script> -->
 </html>
